--- a/config.yml
+++ b/config.yml
@@ -5,11 +5,18 @@ UPR:
   text_col: 'Recommendation'
   sep: ','
 
-PlanInternational:
-  data_file: 'gs://classification_data/PlanInternational_multilabel.csv'
-  pkl_file: 'gs://classification_data/PLAN.pkl'
+PlanInternational_themes:
+  data_file: 'gs://classification_data/PlanInternational_themes.csv'
+  pkl_file: 'gs://classification_data/PLAN_themes.pkl'
   label_col: 'topics'
   text_col: 'Paragraph text'
+  sep: ','
+
+  PlanInternational_persons:
+  data_file: 'gs://classification_data/PlanInternational_affected_persons.csv'
+  pkl_file: 'gs://classification_data/PLAN_affected_persons.pkl'
+  label_col: 'affected_persons'
+  text_col: 'paragraph text'
   sep: ','
 
 PlanInternational_paragraphs:
