--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,13 @@ PyYAML==5.1.2
 pyyml==0.0.2
 gcsfs==0.3.1
 matplotlib==3.1.1
+
+# Dev:
+pip
+setuptools
+pycodestyle                                                                                                                                                                                                                                                  
+flake8                                                                                                                                                                                                                                                       
+flake8-quotes                                                                                                                                                                                                                                                
+flake8-isort                                                                                                                                                                                                                                                 
+yapf                                                                                                                                                                                                                                                         
+ipython                                                                                                                                                                                                                                                      
