--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,14 @@ PyYAML==5.1.2
 pyyml==0.0.2
 gcsfs==0.3.1
 matplotlib==3.1.1
+scipy==1.4.1
+scikit-learn==0.22.1
 
 # Dev:
 pip
 setuptools
 pycodestyle                                                                                                                                                                                                                                                  
 flake8                                                                                                                                                                                                                                                       
-flake8-quotes                                                                                                                                                                                                                                                
-flake8-isort                                                                                                                                                                                                                                                 
-yapf                                                                                                                                                                                                                                                         
-ipython                                                                                                                                                                                                                                                      
+yapf==0.28.0
+ipython
+mypy
