--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ max_line_length = 100
 exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,venv
 
 [flake8]
+ignore = E722,W504,F401,E265,E266,E129,E251
 max-line-length = 100
 exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,venv,.mypy_cache
 
