--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,13 @@ gcsfs==0.3.1
 matplotlib==3.1.1
 scipy==1.4.1
 scikit-learn==0.22.1
+nltk==3.4.5
 
 # Dev:
 pip
 setuptools
-pycodestyle                                                                                                                                                                                                                                                  
-flake8                                                                                                                                                                                                                                                       
+pycodestyle
+flake8
 yapf==0.28.0
 ipython
 mypy
