--- a/config.yml
+++ b/config.yml
@@ -24,14 +24,14 @@ PlanInternational_themes:
   pkl_file: 'gs://classification_data/PlanInternational_themes.pkl'
   label_col: 'label'
   text_col: 'text'
-  sep: ','
+  sep: '$'
 
 PlanInternational_persons:
   data_file: 'gs://classification_data/PlanInternational_affected_persons.csv'
   pkl_file: 'gs://classification_data/PlanInternational_affected_persons.pkl'
   label_col: 'label'
   text_col: 'text'
-  sep: ','
+  sep: '$'
 
 PlanInternational_persons_update:
   data_file: 'gs://classification_data/PlanInternational_affected_persons_joint_data.csv'
