--- a/config.yml
+++ b/config.yml
@@ -21,17 +21,23 @@ PlanInternational_themes_update:
 
 PlanInternational_themes:
   data_file: 'gs://classification_data/PlanInternational_themes.csv'
-  pkl_file: 'gs://classification_data/PLAN_themes.pkl'
-  label_col: 'topics'
-  text_col: 'Paragraph text'
-  sep: ','
+  pkl_file: 'gs://classification_data/PlanInternational_themes.pkl'
+  label_col: 'label'
+  text_col: 'text'
+  add_col:
+    - 'retrieved'
+    - 'sharedId'
+  sep: '$'
 
 PlanInternational_persons:
   data_file: 'gs://classification_data/PlanInternational_affected_persons.csv'
-  pkl_file: 'gs://classification_data/PLAN_affected_persons.pkl'
-  label_col: 'affected_persons'
-  text_col: 'paragraph text'
-  sep: ','
+  pkl_file: 'gs://classification_data/PlanInternational_affected_persons.pkl'
+  label_col: 'label'
+  text_col: 'text'
+  add_col:
+    - 'retrieved'
+    - 'sharedId'
+  sep: '$'
 
 PlanInternational_persons_update:
   data_file: 'gs://classification_data/PlanInternational_affected_persons_joint_data.csv'
@@ -59,6 +65,8 @@ UHRI_themes:
   pkl_file: 'gs://classification_data/UHRI_themes.pkl'
   label_col: 'themes'
   text_col: 'text'
+  add_col:
+    - 'retrieved'
   sep: '$'
 
 UHRI_affected_persons:
@@ -66,6 +74,8 @@ UHRI_affected_persons:
   pkl_file: 'gs://classification_data/UHRI_affected_persons.pkl'
   label_col: 'affected_persons'
   text_col: 'text'
+  add_col:
+    - 'retrieved'
   sep: '$'
 
 UHRI_sdgs:
@@ -73,4 +83,6 @@ UHRI_sdgs:
   pkl_file: 'gs://classification_data/UHRI_sdgs.pkl'
   label_col: 'sdgs'
   text_col: 'text'
+  add_col:
+    - 'retrieved'
   sep: '$'
