--- a/config.yml
+++ b/config.yml
@@ -46,6 +46,13 @@ UHRI_themes:
   text_col: 'text'
   sep: '$'
 
+UHRI_themes_2021_07_31:
+  data_file: 'gs://classification_data/UHRI_themes_2021_07_31_sorted.csv'
+  pkl_file: 'gs://classification_data/UHRI_themes_2021_07_31_sorted.pkl'
+  label_col: 'themes'
+  text_col: 'text'
+  sep: '$'
+
 UHRI_affected_persons:
   data_file: 'gs://classification_data/UHRI_Affected_persons_2020_07_14.csv'
   pkl_file: 'gs://classification_data/UHRI_affected_persons_2020_07_14.pkl'
